Argh, a few bugs in the last commit

--- a/trunk/keys3-test.tex
+++ b/trunk/keys3-test.tex
@@ -162,14 +162,13 @@
 % ----------------------------------------------------------------------
 %   Some content
 %   Outside
-%   Outside
 %   Some content
 %   Some content
 % ----------------------------------------------------------------------
 \tl_new:Nn \l_temp_tl {Outside}
 \tl_new:Nn \g_temp_tl {Outside}
 \SetModuleKeys{
-  key one/.set:N = \l_temp_tl,
+  key/.set:N = \l_temp_tl,
 }
 \begingroup
 \SetModuleKeys{
