Step (1) of splitting \keys_manage:n into two

--- a/trunk/keys3-test.tex
+++ b/trunk/keys3-test.tex
@@ -15,14 +15,15 @@
 % used here.
 \ExplSyntaxOn
 
-\DeclareDocumentCommand{\SetModuleKeys}{m}{
-  \keys_manage:n{
+\DeclareDocumentCommand \SetModuleKeys { m } {
+  \keys_set:n {
     module~name/.cd:,
-    #1}
+    #1
+  }
 }
 
-\DeclareDocumentCommand{\SetKeys}{m}{
-  \keys_manage:n{#1}
+\DeclareDocumentCommand \SetKeys { m } {
+  \keys_set:n {#1}
 }
 
 \ExplSyntaxOff
